--- a/opp/src/main/resources/application.properties
+++ b/opp/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=opp
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/HoodClassic
-spring.datasource.username=postgres
-spring.datasource.password=tvojamama123
+spring.datasource.url=jdbc:postgresql://localhost:5432/localbackendtest
+spring.datasource.username=progibevanda
+spring.datasource.password=progi2024
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 security.basic.enabled=false
